crates/edgezero-macros/tests/ui/secret_store_ref_optional.stderr
error: `#[secret(store_ref)]` may not be `Option<String>`: a store id is structural and must always be present
 --> tests/ui/secret_store_ref_optional.rs:7:12
  |
7 |     vault: Option<String>,
  |            ^^^^^^^^^^^^^^
